--- a/responsive.css
+++ b/responsive.css
@@ -32,10 +32,10 @@
         width: 100%;
         
     }
-    .logo img {
+/*     .logo img {
         width: 20%;
-        /* padding-top: 5px; */
-    }
+        padding-top: 5px;
+    } */
     .img1 img {
         width: 30%;
     }
